Fix playing indicator visibility when paused

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1112,7 +1112,7 @@
             margin-top: 2px;
         }
 
-        .summary-item.is-playing .playing-indicator {
+        .summary-item.is-playing:not(.is-paused) .playing-indicator {
             display: flex;
         }
 
